<resources>
    <string name="app_name">Elshare</string>
    <string name="discription">imageVie3w</string>
    <string name="editText">Name*</string>
    <string name="editText2">Phone*</string>
    <string name="editText3">Enter email*</string>
    <string name="editText4">Password*</string>
    <string name="editText5">Re-enter password*</string>
    <string name="editText6">Referred by</string>
    <string name="button">Create Account</string>
    <string name="button2">Log In </string>
    <string name="button3">Host my station </string>
    <string name="textView1"> \n <b> Hooray!!!</b> \n \n You have successfully pluged into the Elshare community charging network.\n \n Before submitting a charging \nrequest you will need to:</string>
    <string name="textView152">-Complete your<a href=''> Account Profile</a></string>
    <string name="textView153">Confirm your email(check your inbox)</string>
    <string name="textView2">If you already have account?</string>
    <string name="button4">Find Charging </string>
    <string name="textView4">Must be in 8 char..</string>
    <string name="editText66">Type your email again </string>
    <string name="checkBox">I accept Elshare </string>
    <string name="textView101">Join Elshare </string>
    <string name="textView102">Log In </string>
    <string name="textView103">Do not have an account? </string>
    <string name="button125">Sign Up </string>
    <string name="button15">Login</string>
    <string name="textView104">or Log in using </string>
    <string name="editText69">Email*</string>
    <string name="editText70">Password*</string>
    <string name="editText71">Re-enter password*</string>
    <string name="editText80">Referred by</string>
    <string name="addVihicleYear">Model Year*</string>
    <string name="addVihicleBatterySize">Battery Size*</string>
    <string name="textView3">Username</string>
    <string name="editText7">Email Id*</string>
    <string name="discription1">imageView</string>
    <string name="discription2">imageView2</string>
    <string name="editText8">Password*</string>
    <string name="editText67">Confirm password*</string>
    <string name="discription3">imageView3</string>
    <string name="button5">Forgot Password?</string>
    <string name="button6">Sign Up</string>
    <string name="textView5">or Sign Up using</string>
    <string name="textView6">Password</string>
    <string name="button7">Skip for now</string>
    <string name="button13">Resend OTP</string>
    <string name="button14">Verify</string>
    <string name="editText9">Enter Mobile Number</string>
    <string name="textView7">Forgot password ?</string>
    <string name="editText10">Email-id</string>
    <string name="editTex11">Password</string>
    <string name="textView8">Search</string>
    <string name="discription4">imageView4</string>
    <string name="firstNameProfile">Full Name*</string>
    <string name="emailIdProfile">Email*</string>
    <string name="mobileProfile">Phone*</string>
    <string name="textView12">ID proof*</string>
    <string name="uploadPicture">Upload Id Proof*</string>
    <string name="uploadPictureLabel">Upload profile photo</string>
    <string name="button17">Update</string>
    <string name="textView14">Select Time</string>
    <string name="textView15">Start Time</string>
    <string name="textView16">End Time</string>
    <string name="editTex12"></string>
    <string name="editTex13"></string>
    <string name="editTex14"></string>
    <string name="textView17">Amount</string>
    <string name="textView18">Total Amount</string>
    <string name="button20">Pay Now</string>
    <string name="textView19">Search</string>
    <string name="button21">Contact US</string>
    <string name="button22"> Location</string>
    <string name="button23"> INDIA</string>
    <string name="textView20">2/8 shubhmangal,model colony,Pune 411106</string>
    <string name="discription7">imageView7</string>
    <string name="discription8">imageView8</string>
    <string name="discription9">imageView9</string>
    <string name="button31"> USA</string>
    <string name="textView21">11946 primrose Valley Trace Houston,Texas,77089</string>
    <string name="textView22">support@elshare.in</string>
    <string name="editTex17">Name</string>
    <string name="editTex18">Email</string>
    <string name="editTex19">Subject</string>
    <string name="editTex20">Message</string>
    <string name="button32">Send</string>
    <string name="button33">Change frag</string>
    <string name="title_activity_my_account">my_account</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="button35">Add Listing</string>
    <string name="button36">General</string>
    <string name="button37">Availability</string>
    <string name="button38">Pricing</string>
    <string name="textView23">Will your listing be residential,commercial or public?</string>
    <string name="button39">Residential</string>
    <string name="button40">Commercial</string>
    <string name="button41">Public</string>
    <string name="textView24">Select country</string>
    <string name="textView25">Select state</string>
    <string name="textView26">Select city</string>
    <string name="editTex21">Apartment</string>
    <string name="editTex22">Address</string>
    <string name="editTex23">Name Of Charger</string>
    <string name="textView27">Select charger type</string>
    <string name="textView28">Select charger brand</string>
    <string name="textView29">Select charger model</string>
    <string name="textView30">Private nearest landmark*</string>
    <string name="textView31">Public nearest landmark*</string>
    <string name="button42">Next</string>
    <string name="button43">Next</string>
    <string name="button44">Contact us</string>
    <string name="button45">Pricing</string>
    <string name="button46">My profile</string>
    <string name="button47">My listing Grneral</string>
    <string name="button48">My Listing</string>
    <string name="button49">General</string>
    <string name="button50">Availability</string>
    <string name="button51">Pricing</string>
    <string name="textView32"><b>Set a weekly availability of your charging station.Select the day/s of the week and the hours of each day that you would like to make your charger available to EV drivers.</b></string>
    <string name="textView34"><b>If you did like to instant booking,Elshare member will be able to instantly book use of your station during all seleted time periods.</b></string>
    <string name="textView35">Accept instant booking</string>
    <string name="textView36">Multiday select</string>
    <string name="textView37">Single day select</string>
    <string name="button53">M</string>
    <string name="button54">T</string>
    <string name="button55">W</string>
    <string name="button56">T</string>
    <string name="button57">F</string>
    <string name="button58">Sa</string>
    <string name="button59">Su</string>
    <string name="textView38">Select time block for Monday</string>
    <string name="editText27">Start time</string>
    <string name="editText28">End time</string>
    <string name="textView39">Add another time block</string>
    <string name="textView40">All day</string>
    <string name="button60">Back</string>
    <string name="button61">Next</string>
    <string name="textView41">This markup is in addition to your estimated electric cost</string>
    <string name="textView43">Your profit Rs/kwh:</string>
    <string name="textView44">Host access fee guidlines:</string>
    <string name="textView45">Low access fee:5/hr</string>
    <string name="textView46">Average access fee:5/hr</string>
    <string name="textView47">High access fee:5/hr</string>
    <string name="textView48">What type of pricing would you like to use?</string>
    <string name="button62">Per Hour</string>
    <string name="button63">Per KWH</string>
    <string name="textView49">Price per Hr:</string>
    <string name="editText40"></string>
    <string name="textView50">Ideal fee</string>
    <string name="button64">Back</string>
    <string name="button65">Next</string>
    <string name="AddVehicleLabel">EV Driver Information</string>
    <string name="button67">General</string>
    <string name="button68">History</string>
    <string name="textView51">Select vehical type</string>
    <string name="textView52">Year</string>
    <string name="textView53">Make</string>
    <string name="textView54">Model</string>
    <string name="textView55">Color</string>
    <string name="addVehicleRegistrationNo">License Plate:*</string>
    <string name="textView56">Battery Size</string>
    <string name="editText42">Insert battery size(KWH)</string>
    <string name="textView57">Onboard charger size(kw)</string>
    <string name="editDriver">Submit</string>
    <string name="textView58">General</string>
    <string name="textView59">Availability</string>
    <string name="textView60">Pricing</string>
    <string name="addDriverOnBoardSize">On Board Charger(kwh)*</string>
    <string name="textView61">General</string>
    <string name="textView62">History</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="button70">Delete this Listing</string>
    <string name="button71">Add another listing</string>
    <string name="button72">View as public</string>
    <string name="textView63">General</string>
    <string name="textView64">Availability</string>
    <string name="textView65">Pricing</string>
    <string name="textView66">This listing is residential ?</string>
    <string name="textView67">Your address</string>
    <string name="textView68">Flat no 204,celebration apartment,patil vasti ,Balewadi,Pune-411045</string>
    <string name="button73">Change your address</string>
    <string name="button74">listing</string>
    <string name="button75">contact us</string>
    <string name="button76">my account</string>
    <string name="button77">smart pricing</string>
    <string name="button78">My profile</string>
    <string name="button79">Login</string>
    <string name="textView69">Charger type</string>
    <string name="textView70">Receptacle type</string>
    <string name="textView71">Voltage</string>
    <string name="textView72">Ampere</string>
    <string name="textView73">The electric utility company</string>
    <string name="textView74">Rate structure</string>
    <string name="textView75">Nearest land mark</string>
    <string name="textView76"></string>
    <string name="button80">Vacction Mode</string>
    <string name="button81">Current status:available</string>
    <string name="button82">Going away on vacation?snooz your listing</string>
    <string name="editText43">Start time</string>
    <string name="editText44">End time</string>
    <string name="button83">Snooz my listing</string>
    <string name="textView77">Edit Listing</string>
    <string name="textView78">Vaccation mode</string>
    <string name="textView79">Have you not account yet?</string>
    <string name="button90">Cancel</string>
    <string name="button91">OK</string>
    <string name="textView92">Smart Pricing</string>
    <string name="textView93">Although we do not directly meter electricity,we calculate the estimated cost of each transaction on our smart pricing algirithm.It takes into account the unique base electricity price per unit and Host profit.You will always be reimbursed for 100% of your estimated base electricity cost,plus the profit you choose.The guidelines to fill the profit for host are mentioned.</string>
    <string name="radioButton13">12/hr</string>
    <string name="radioButton14">12/hr</string>
    <string name="radioButton15">12/hr</string>
    <string name="button116">General</string>
    <string name="button117">Availability</string>
    <string name="button118">Pricing</string>
    <string name="button137">Ev Driver</string>
</resources>