<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="top|center"
    android:orientation="horizontal">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/radioButton13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/radioButton13"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton14"
            android:layout_width="match_parent"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:text="@string/radioButton14"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="match_parent"
            android:layout_weight="30"
            android:layout_height="wrap_content"
            android:text="@string/radioButton15"
            android:textSize="16sp" />

    </TableRow>




</LinearLayout>